# Pandorica

./: .clang-format  .clangd  .gitattributes  .gitignore  LICENSE  README.md
pandorica_graphics/: CMakeLists.txt  vcpkg.json
pandorica_graphics/docs/: annotated.html  classes.html  dir_38c8d24aef3972a7f87b834274e76e31.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7020b8b7abcceffa3f9f7a2d24718f16.html  dir_781a8fb015559490234f66157be04f8a.html  dir_80a97e946e592a634a6c19a3e8899843.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  docs.dox  doxygen_crawl.html  examples.html  examples.js  files.html  functions.html  functions_vars.html  hierarchy.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  topics.html  topics.js
pandorica_graphics/examples/: example.twf  tutorial_01.cpp  tutorial_02.cpp  tutorial_03.cpp
pandorica_graphics/include/: pg.hpp  pg_audiodata.hpp  pg_audiodevice.hpp  pg_audiotrack.hpp  pg_buffer.hpp  pg_camera.hpp  pg_context.hpp  pg_font.hpp  pg_generic.hpp  pg_gpudevice.hpp  pg_main.hpp  pg_object.hpp  pg_pipeline.hpp  pg_sampler.hpp  pg_shader.hpp  pg_text.hpp  pg_textdevice.hpp  pg_texture.hpp  pg_transferbuffer.hpp  pg_window.hpp  pg_workspace.hpp
pandorica_graphics/shaders/: compile.sh
pandorica_graphics/src/: pg_audiodata.cpp  pg_audiodevice.cpp  pg_audiotrack.cpp  pg_buffer.cpp  pg_camera.cpp  pg_context.cpp  pg_font.cpp  pg_generic.cpp  pg_gpudevice.cpp  pg_main.cpp  pg_object.cpp  pg_pipeline.cpp  pg_sampler.cpp  (+7 more)
(+138 files in other folders)
